...
    </dependencies>
    <scenes>
        <!--Home Collection View Controller-->
        <scene sceneID="6LE-I2-slO">
            <objects>
                <collectionViewController id="kN5-EA-i4S" customClass="HomeCollectionViewController" customModule="NewYorkTimes" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" restorationIdentifier="CollectionViewID" dataMode="prototypes" id="EpG-TV-Wyh">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yXU-1S-4gV">
                            <size key="itemSize" width="341" height="265"/>
                            <size key="headerReferenceSize" width="50" height="50"/>
...
                            </collectionViewCell>
                        </cells>
                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="HomeHeaderCell" id="7j4-27-VQE">
                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                            <autoresizingMask key="autoresizingMask"/>
                            <subviews>
                                <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="Yoh-kv-Uor">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                    <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                    <connections>
                                        <outlet property="delegate" destination="kN5-EA-i4S" id="Bca-6g-9RI"/>
                                    </connections>
                                </searchBar>
...
            <point key="canvasLocation" x="-1311.2" y="-412.44377811094455"/>
        </scene>
        <!--Detail News-->
        <scene sceneID="uEh-Ue-dnZ">
            <objects>
                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="C27-sM-Bov" customClass="PageViewController" customModule="NewYorkTimes" customModuleProvider="target" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" title="Detail News" id="2Q5-TY-RaA">
                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="ayu-53-Mr1">
                            <connections>
                                <action selector="goBackHome:" destination="C27-sM-Bov" id="Bz5-iY-Tmb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
